# bdr-dq

./: .gitignore  README.md  SPARQL Codes  assess_coordinate_completeness.txt  assess_coordinate_precision.txt  assess_coordinate_unusual.txt  assess_date_completeness.txt  assess_date_recency.txt  pyproject.toml  requirements.txt
Convert/: README.md  assess_date_recency.py  assess_date_recency.sparql  data_generation.py  main.py  pyproject.toml  readme.txt  test_assess_date_recency_query.py  test_assess_date_recency_script.py  test_data.ttl  test_dq.py
Convert/compression/: _generate_compression_query.py  assessments_results_vocabulary.json  vocabulary_versions.json
Convert/docs/: DQAF Technical documentation.docx
Convert/dqaf/: __init__.py  main.py
Convert/functions/: assess_date_completeness.py  assess_date_recency.py
Convert/output/: afe1fd191439456c8b0a0eeb222744ac-metadata.ttl
Convert/queries/: assess_coordinate_completeness.sparql  assess_coordinate_precision.sparql  assess_coordinate_unusual.sparql  assess_date_completeness.sparql  assess_date_format_validation.sparql  assess_date_recency.rq  assess_date_recency.sparql  assess_datum_completeness.sparql  assess_datum_validation.sparql  assess_duplicate_entries.sparql  assess_geo_spatial_accuracy_precision.sparql  assess_scientific_name_completeness.sparql  assess_scientific_name_validation.sparql
Convert/rules/: calculate_dqaf_scores.py  coordinate_inside_australia_check.py  coordinate_outlier_iqr.py  coordinate_outlier_isolation_forest.py  coordinate_outlier_robust_covariance.py  date_outlier_iqr.py  (+6 more)
(+167 files in other folders)
