[tool.poetry]
name = "bdr data quality assessment tool"
version = "0.0.1"
description = "This is a Python package that performs data quality assessment on ABIS data, according to DQ rules implemented for the Biodiversity Data Repository"
authors = ["Nicholas Car, <nicholas.car@dcceew.gov.au>"]
license = "Creative Commons BY 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rdflib = "7.0.0"
prettytable = "^3.9.0"
pyshacl = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
